refactor(store): make Model AutoCloseable
Prevent memory leaks from native resources used by ModelAdapter instances, such
as the the MPSolver in BoundScopePropgator.